@@ -2,6 +2,8 @@
 -----
 1. Add support for analysing CUE files.
 2. Output list of (up to 100) tracks that failed to analyse.
+3. When performing a dry-run analysis (--dry-run) print paths of all tracks to
+   be analysed and to be removed.
 
 0.0.2
 -----
